# invoicy

./: .gitignore  Cargo.toml  README.md  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
examples/: afip_a.toml  afip_c.toml  generic.toml
src/: main.rs  overrides.rs  schema.rs  typst.rs  world.rs
src/commands/: generate.rs  mod.rs  schema.rs
src/formats/: afip_a.rs  afip_c.rs  generic.rs  mod.rs
templates/: afip_a.typ  afip_c.typ  generic.typ
