[package]
name = "invoicy"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config parsing
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Typst for PDF generation
typst = "0.13"
typst-pdf = "0.13"
chrono = "0.4"

# Utils
dirs = "6"
